--- a/src/app/customer-selection/customer-selection.page.scss
+++ b/src/app/customer-selection/customer-selection.page.scss
@@ -15,5 +15,9 @@ ion-col {
     justify-self   : center;
     justify-content: center;
     justify-items  : center;
-    left            : 5%;
+    left           : 5%;
+}
+
+ion-searchbar {
+    width: 30%;
 }
