--- a/src/app/layout/layout.page.html
+++ b/src/app/layout/layout.page.html
@@ -17,14 +17,10 @@
     </ion-tab-button>
 
     <ion-tab-button tab="Send-SMS">
-      <ion-icon name="send-outline"></ion-icon>
+      <ion-icon name="calendar-outline"></ion-icon>
       <ion-label>SMS</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="Events">
-      <ion-icon name="alarm-outline"></ion-icon>
-      <ion-label>Events</ion-label>
-    </ion-tab-button>
 
     <ion-tab-button tab="FeedbackList">
       <ion-icon name="people-outline"></ion-icon>
