--- a/src/app/table/table.page.html
+++ b/src/app/table/table.page.html
@@ -42,7 +42,7 @@
     </div>
   </ion-grid>
   <div id="page">
-    <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" (pageChange)="page=$event">
+    <pagination-controls id="listing_pagination" maxSize="5" directionLinks="true" (pageChange)="pageChange($event)">
     </pagination-controls>
   </div>
 </ion-content>
